--- a/src/createsticker.html
+++ b/src/createsticker.html
@@ -49,8 +49,6 @@
 <div class="tab_wrap">
 	<input id="tab1" type="radio" name="tab_btn" checked>
 	<input id="tab2" type="radio" name="tab_btn">
-	
-	<input name='testText'>
 
 	<div class="tab_area">
 		<label class="tab1_label" for="tab1">カード登録(写真あり)</label>
@@ -611,8 +609,7 @@
             }
 
 			
-			const { text } = await( await fetch('/api/CreateImage')).json();
-	        document.querySelector('#testText').textContent = text;			
+//			const { text } = await( await fetch('/api/CreateImage')).json();
 /*
             await createWidget(emploeeId, oldid);
 
