--- a/src/createsticker.html
+++ b/src/createsticker.html
@@ -613,7 +613,7 @@
             
 
             // 一時ファイルの削除
-            await fetch(api_uri + emploeeId  + '.png' , {
+            await fetch(api_uri_delete + emploeeId  + '.png' , {
                 method: 'DELETE',
                 headers: {
                     'Accept': 'application/json',
